--- a/index.html
+++ b/index.html
@@ -20,6 +20,31 @@
     <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 <body>
+    <!-- Header -->
+    <header class="page-header">
+        <div class="page-header_main-nav">
+            <a href="./index.html" class="logo">LOGO</a>
+
+            <!-- Site-nav -->
+            <div class="page-header_site-nav">
+                <a href=""class="page-header_site-nav-link">Home</a>
+                <a href=""class="page-header_site-nav-link">How it’s made?</a>
+                <a href=""class="page-header_site-nav-link">Our products</a>
+                <a href=""class="page-header_site-nav-link">Contact</a>
+            </div>
+
+            <button type="button">Buy now</button>
+
+        </div>
+
+    </header>
+
+    <main>
+        <!-- Hero section -->
+        <section class="section-hero">
+            
+        </section>
+    </main>
     
 </body>
 </html>
